# timingperf

./: README.md
batch_mm/cublas/: cublas_mm.cu
batch_mm/cudnn/: cudnn_mm.py
batch_mm/cutlass/: CMakeLists.txt  cutlass_bmm.cu
batch_mm/pytorch/: pytorch_mm.py
batch_mm/triton/: triton_bmm.py  triton_bmm_tune.py
convolution/cutlass/: cutlass_fprop.cu  tensorop_fprop.txt
convolution/pytorch/: pytorch_conv.py
convolution/triton/: conv.py  conv_test.py  test.sh  tune.py
convolution_nostride/cudnn/: cudnn_conv.py
convolution_nostride/cutlass/: CMakeLists.txt  README.md  cutlass_fprop.cu
convolution_nostride/pytorch/: pytorch_conv.py
mm/cublas/: cublas_mm.cu
mm/cudnn/: cudnn_mm.py
mm/cutlass/: CMakeLists.txt  cutlass_mm.cu  tensorop_gemm.txt
mm/pytorch/: pytorch_mm.py
mm/triton/: triton_mm.py  triton_mm_tune.py
